# base

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  Makefile  README.md  SECURITY.md  base.code-workspace  compose.override.yml  package-lock.json  package.json  pyproject.toml
.agents/skills/: README.md  ai-agent-collaboration-exec  codex-subagent  dependabot-pr-maintainer  git-mainbranch  grill-me  grill-me-essential-first  harness-autoptimizer  repo-instruction-optimizer  repo-template-specializer
.agents/skills/ai-agent-collaboration-exec/: SKILL.md
.agents/skills/codex-subagent/: SKILL.md
.agents/skills/git-commit-pr/: SKILL.md
.agents/skills/git-mainbranch/: SKILL.md
.agents/skills/harness-autoptimizer/: SKILL.md
.agents/skills/pr-review-lifecycle/: SKILL.md
.agents/skills/repo-instruction-optimizer/: SKILL.md
.agents/skills/repo-template-specializer/: SKILL.md
.agents/skills/skill-authoring/: SKILL.md
.agents/skills/tmux-agent-review-loop/: SKILL.md
.claude/: settings.json
.claude/commands/agent/: README.md  agent_full_cycle.md  agent_goal_run.md  agent_init.md  agent_quickstart.md  agent_recovery_init.md  agent_templates_pull.md  agent_templates_push_pr.md  demo_e2e_scenario.md  eval_perturb_suite.md  outerloop_abtest.md  outerloop_promote.md  outerloop_rollback.md
.claude/commands/tasks/: codex-subagent.md  mainbranch.md
.claude/skills/: README.md  git-mainbranch  grill-me-essential-first  pr-review-lifecycle  repo-template-specializer  skill-authoring
.claude/skills/ai-agent-collaboration-exec/: SKILL.md
.claude/skills/codex-subagent/: SKILL.md
.claude/skills/dependabot-pr-maintainer/: SKILL.md
.claude/skills/git-mainbranch/: SKILL.md
.claude/skills/grill-me-essential-first/: SKILL.md
.claude/skills/harness-autoptimizer/: SKILL.md
.claude/skills/skill-authoring/: SKILL.md
.codex/: config.toml  history.jsonl  version.json
.codex/skills/: ai-agent-collaboration-exec  codex-subagent  dependabot-pr-maintainer  git-commit-pr  harness-autoptimizer  repo-instruction-optimizer  skill-authoring  tmux-agent-review-loop
.cursor/: mcp.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: agent-task.yml  bug.yml  feature.yml
.github/workflows/: ci.yml  claude.yml  harness-autopt.yml  template-health.yml  test-all-subsystems.yml
app/: app_factory.py  chat_feature.py  demo.py  demo_search_combo.py  ex.py  search_feature.py  svg_utils.py  ui_css.py
app/db/: __init__.py  bootstrap.py  models.py  session.py
app/features/: chat.py
app/ops/github/: pr.py
app/public/styles/: app.css
app/repositories/: settings_repo.py  thread_repo.py
app/services/: settings_service.py  thread_service.py  title_service.py
app/ui/: app_ui.py  avatars.py  head.py  threads_ui.py
app/ui/html/: threads_html.py
app/ui/tabs/: chat_tab.py  settings_tab.py  threads_tab.py
app/utils/: svg.py
app/web/: assets.py  factory.py
app/web/routers/: settings.py  threads.py
checklists/: refactor_app_factory_staged_migration.md  threads_feature_checklist.md
docker/: Dockerfile.cpu  Dockerfile.gpu  compose.cpu.yml  compose.gpu.yml  configure-nvidia-dind  gpu-container-entrypoint
docker/rc/: .bashrc  .tmux.conf
docker/rc/.codex/: config.toml
docs/: repository-template-design.md
docs/03.detail_design/: gradio_fastapi_playbook.md
docs/04.knowledge/: base_harness_set.md  base_harness_set.toml  gradio_fastapi_threads_ui_lessons.md  harness_sync_from_dify_plugins_2026-03-28.md
docs/ai/: agent-secret-handling.md  cursor-cloud.md  execution-playbooks.md  experience-capture.md  mcp.md  operator-checklist.md  repo-contract.md
docs/ai/checklists/: codex-mcp-collaboration-template.md
docs/ai/skills/: README.md  ai-agent-collaboration-exec.md  codex-subagent.md  dependabot-pr-maintainer.md  git-commit-pr.md  git-mainbranch.md  grill-me-essential-first.md  grill-me.md  harness-autoptimizer.md  pr-review-lifecycle.md  repo-instruction-optimizer.md  repo-template-specializer.md  skill-authoring.md  (+1 more)
docs/architecture/: base-harness-set.md  base-harness-set.toml  harness-resources.toml  knowledge-architecture.md  overview.md
docs/auto-refine-agents/: architecture.md  architecture_summary.md  cli-implementation-design.md  deep-agents-technology-review.md  evaluation-governance.md  feasibility-study-report.md  mvp-tracker.md  quickstart_goal_only.md  registry-guidelines.md  solo-founder-strategy.md  worktree-guide.md
docs/design/: README.md
docs/standards/: coding.md  communication.md  review.md  security.md  testing.md
memory-bank/00-core/: mandatory_rules_checklist.md  repository_directory_conventions.md
memory-bank/04-quality/: troubleshooting_css_js_externalization_shadow_dom_2025-08-24.md
memory-bank/11-checklist-driven/: checklist_driven_execution_framework.md
notebooks/: ex.ipynb
public/scripts/: theme_bridge.js  threads_ui.js
public/styles/: app.css
scripts/: __init__.py
scripts/ci/: __init__.py  repo_copy.py  validate_template.py
scripts/template/: __init__.py  apply_overlay.py  sync_upstream_skill.py  upstream_skills.toml
secrets/: README.md
src/: README.md
templates/: manifest.yaml
tests/: README.md  test_api_endpoints.py  test_app_factory.py  test_base_harness_set.py  test_chat_feature.py  test_db_bootstrap.py  test_db_session.py  test_gpu_dind_startup_contract.py  test_repo_methods.py  test_search_and_svg_utils.py  test_settings_service.py  test_template_contract.py  test_thread_service.py  test_threads_ui.py
tests/codex_subagent/: test_model_option.py  test_pipeline_cli.py  test_pipeline_execute.py  test_pipeline_helpers.py  test_pipeline_integration.py  test_pipeline_patch.py  test_pipeline_prompt.py  test_pipeline_schema.py  test_pipeline_spec.py  test_query_model_filter.py  test_tool_use_integration.py  test_v2_runtime.py
tests/harness_autoptimizer/: test_harness_autopt.py  test_tmux_handoff_state.py
tests/template_smoke/: test_apply_overlay.py  test_sync_upstream_skill.py
(+84 files in other folders)
