[project]
name = "ai-agent-repository-template"
version = "0.1.0"
description = "AI agent repository template control plane"
authors = [{ name = "AI Developer", email = "dev@example.com" }]
requires-python = ">=3.12,<=3.14"
dependencies = [
    "jsonschema",
    "pyyaml",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "black",
    "flake8",
    "isort",
    "pytest-asyncio",
    "mypy",
    "pytest-benchmark",
    "memory-profiler",
    "psutil",
    "ruff",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 79
target-version = ['py312']
exclude = '''
/(
    \.git
  | \.codex
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | venv
  | htmlcov
  | output
  | backup
  | docs
  | memory-bank
  | templates
  | examples
  | node_modules
)/
'''

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
skip = ["backup", "docs", "memory-bank", "templates", "examples", "output"]

[tool.flake8]
max-line-length = 88
max-complexity = 10
ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    ".pytest_cache",
    "backup",
    "output"
]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [".codex"]

[tool.ruff.lint]
# Enable common rulesets: pycodestyle (E/W), Pyflakes (F), isort (I), bugbear (B), pyupgrade (UP)
select = ["E", "W", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E501"]
"bin/claude_slash_runner.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]
markers = [
    "unit: 単体テスト（高速・独立）",
    "integration: 統合テスト（中速・依存あり）",
    "codex_live: ChatGPT にログイン済みの Codex CLI を実際に呼ぶローカル専用テスト",
    "e2e: E2Eテスト（低速・完全シナリオ）",
    "slow: 実行時間の長いテスト",
    "security: セキュリティ関連テスト",
    "asyncio: mark the test as a coroutine, it will be run using an asyncio event loop",
    "timeout: mark a test as having a timeout (seconds)",
    "performance: パフォーマンステスト（ベンチマーク・プロファイリング）",
]
addopts = [
    "-v",
    "--strict-markers",
]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "error",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore::ResourceWarning",
]
